--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,8 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testApplicationId "com.coditas.example.test"
+        testInstrumentationRunner "com.coditas.example.test.runner.Instrumentation"
     }
 
     buildTypes {
@@ -42,12 +43,18 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    sourceSets {
+        androidTest {
+            assets.srcDirs = ['src/androidTest/assets']
+        }
+    }
 }
 
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
@@ -59,8 +66,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
 
     // Hilt
-    implementation 'com.google.dagger:hilt-android:2.44'
-    kapt 'com.google.dagger:hilt-android-compiler:2.44'
+    implementation 'com.google.dagger:hilt-android:2.44.2'
+    kapt 'com.google.dagger:hilt-android-compiler:2.44.2'
 
     // LiveData
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
@@ -84,5 +91,20 @@ dependencies {
 
     // Encrypted shared preference
     implementation 'androidx.security:security-crypto:1.0.0'
+
+
+     //BDD
+    androidTestImplementation "androidx.annotation:annotation:1.3.0"
+    androidTestImplementation "androidx.test:rules:1.5.0"
+    androidTestImplementation "io.cucumber:cucumber-android:4.9.0"
+    androidTestImplementation "io.cucumber:cucumber-android:4.9.0"
+    androidTestImplementation "androidx.test.espresso:espresso-intents:3.5.1"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.5.1"
+    androidTestImplementation "com.jakewharton.espresso:okhttp3-idling-resource:1.0.0"
+    androidTestImplementation "com.android.support.test.uiautomator:uiautomator-v18:2.1.3"
+    androidTestImplementation "org.hamcrest:hamcrest-library:2.2"
+    androidTestImplementation "androidx.test.uiautomator:uiautomator:2.2.0"
+
+    debugImplementation "androidx.test:core-ktx:1.5.0"
 
 }
