--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,15 @@
     <application
         android:name=".di.App"
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_coditas_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_coditas_logo"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:usesCleartextTraffic="true"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidStarter"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:dataExtractionRules="@xml/data_extraction_rules">
         <activity
             android:name=".ui.MainActivity"
             android:exported="true">
